Added missing title

--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-3.htm
@@ -1,43 +1,38 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><HTML>
-<head>
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
+<link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css">
+  <title>Java projects</title>
 </head>
-<body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
-<div class=Section1> 
+<body bgcolor="#ffffff" lang="EN-US" link="blue" vlink="blue">
+<div class="Section1"> 
   <h1>Java projects</h1>
-  <p class=para>A Java project has an associated Java builder that can incrementally 
+  <p class="para">A Java project has an associated Java builder that can incrementally 
     compile Java source files as they are changed. Each Java project maintains 
     additional information about the type hierarchy and the references and declarations 
     of Java elements. This information is constantly updated as the user changes 
     the Java source code. It is not dependent on the builder.</p>
-  <p class=para>You can organize Java projects in two different ways:</p>
-  <ul type=disc>
-    <li class=MsoNormal style='color:black;'><span
-     style='font-size:10.0pt;font-family:Arial'>Using the project as the source 
+  <p class="para">You can organize Java projects in two different ways:</p>
+  <ul type="Disc">
+    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Using the project as the source 
       container. This is the recommended organization for simple projects. </span></li>
-    <li class=MsoNormal style='color:black;'><span
-     style='font-size:10.0pt;font-family:Arial'>Using source folders as the source 
+    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Using source folders as the source 
       container. This is the recommended organization for more complex projects. 
       It allows you to subdivide packages into groups.</span></li>
   </ul>
-  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
-alt="Related concepts" border=0></p>
+  <p><img width="159" height="27" id="_x0000_i1025" src="..%5Cimages%5Cngrelc.gif" alt="Related concepts" border="0"></p>
   <p><a href="concepts-4.htm">Java builder</a><br>
-    <a href="..\concepts\concepts-9.htm">Refactoring support</a></p>
-  <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="..\tasks\tasks-85.htm">Copying and moving Java elements</a><br>
-    <a href="..\tasks\tasks-11.htm">Creating Java elements</a><br>
-    <a href="..\tasks\tasks-13.htm">Creating a Java project as its own source 
+    <a href="..%5Cconcepts%5Cconcepts-9.htm">Refactoring support</a></p>
+  <p><img border="0" width="159" height="27" id="_x0000_i1026" src="..%5Cimages%5Cngrelt.gif" alt="Related tasks"></p>
+  <p><a href="..%5Ctasks%5Ctasks-85.htm">Copying and moving Java elements</a><br>
+    <a href="..%5Ctasks%5Ctasks-11.htm">Creating Java elements</a><br>
+    <a href="..%5Ctasks%5Ctasks-13.htm">Creating a Java project as its own source 
     container</a><br>
-    <a href="..\tasks\tasks-14.htm">Creating a Java project with source folders</a><br>
-    <a href="..\tasks\tasks-26.htm">Creating a new source folder</a><br>
-    <a href="..\tasks\tasks-47.htm">Filtering elements</a><br>
-    <a href="..\tasks\tasks-57.htm">Generating accessors</a><br>
-    <a href="..\tasks\tasks-12.htm">Organizing Java projects</a><br>
-    <a href="..\tasks\tasks-128.htm">Setting the launcher for a project</a></p>
+    <a href="..%5Ctasks%5Ctasks-14.htm">Creating a Java project with source folders</a><br>
+    <a href="..%5Ctasks%5Ctasks-26.htm">Creating a new source folder</a><br>
+    <a href="..%5Ctasks%5Ctasks-47.htm">Filtering elements</a><br>
+    <a href="..%5Ctasks%5Ctasks-57.htm">Generating accessors</a><br>
+    <a href="..%5Ctasks%5Ctasks-12.htm">Organizing Java projects</a><br>
+    <a href="..%5Ctasks%5Ctasks-128.htm">Setting the launcher for a project</a></p>
 </div>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a> 
 </p>
-</body>
-</html>
+</body></html>
