--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-7.htm
@@ -1,83 +1,70 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><HTML>
-<head>
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
+<link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css">
+  <title>Java editor</title>
 </head>
-<body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
-<div class=Section1> 
+<body bgcolor="#ffffff" lang="EN-US" link="blue" vlink="blue">
+<div class="Section1"> 
   <h1>Java editor</h1>
-  <p class=para>The JDT provides an editor that gives you specific support for 
+  <p class="para">The JDT provides an editor that gives you specific support for 
     editing Java code. </p>
-  <p class=para>The editor is associated with the Java-specific Outline view, 
+  <p class="para">The editor is associated with the Java-specific Outline view, 
     which shows the structure of the active Java compilation unit. It is updated 
     as the user edits the compilation unit.</p>
-  <p class=para>The Java editor can be opened on binary CLASS files. If a JAR 
+  <p class="para">The Java editor can be opened on binary CLASS files. If a JAR 
     file containing the CLASS files has a source attachment, then the editor shows 
     the corresponding source.</p>
-  <p class=para>The editor includes the following features:</p>
-  <ul type=disc>
-    <li class=MsoNormal style='color:black;'><span
-     style='font-size:10.0pt;font-family:Arial'>Syntax highlighting</span></li>
-    <li class=MsoNormal style='color:black;'><span
-     style='font-size:10.0pt;font-family:Arial'>Content/code assist</span></li>
-    <li class=MsoNormal style='color:black;'><span
-     style='font-size:10.0pt;font-family:Arial'>Code formatting</span></li>
-    <li class=MsoNormal style='color:black;'><span
-     style='font-size:10.0pt;font-family:Arial'>Import assistance</span></li>
-    <li class=MsoNormal style='color:black;'><span
-     style='font-size:10.0pt;font-family:Arial'>Integrated debugging features</span></li>
-    <li class=MsoNormal style='color:black;'><span
-     style='font-size:10.0pt;font-family:Arial'>Can be configured to either show 
+  <p class="para">The editor includes the following features:</p>
+  <ul type="Disc">
+    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Syntax highlighting</span></li>
+    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Content/code assist</span></li>
+    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Code formatting</span></li>
+    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Import assistance</span></li>
+    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Integrated debugging features</span></li>
+    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Can be configured to either show 
       an entire compilation unit or a single Java element only (to change the 
       setting, use the toolbar button <b>Show Source of Selected Element Only</b>)</span></li>
   </ul>
-  <p class=para>By default, this editor is activated by either:</p>
-  <ul type=disc>
-    <li class=MsoNormal style='color:black;'><span
-     style='font-size:10.0pt;font-family:Arial'>selecting <b>Open With</b> &gt; 
+  <p class="para">By default, this editor is activated by either:</p>
+  <ul type="Disc">
+    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">selecting <b>Open With</b> &gt; 
       <b>Java Editor</b> from a selection's pop-up menu in the Navigator, Package 
       Explorer or Types view </span></li>
-    <li class=MsoNormal style='color:black;'>clicking a Java file in the Navigator 
+    <li class="MsoNormal" style="color: black; ">clicking a Java file in the Navigator 
       or Package Explorer view (see<b> </b>the <b>&nbsp;Window &gt; Preferences 
       &gt; Workbench </b>preference page to choose between single and double click 
       modes)</li>
-    <li class=MsoNormal style='color:black;'>clicking a Java type, method or field 
+    <li class="MsoNormal" style="color: black; ">clicking a Java type, method or field 
       in the Package Explorer, Types, Members or Hierarchy view (see<b> </b>the 
       <b>&nbsp;Window &gt; Preferences &gt; Workbench </b>preference page to choose 
       between single and double click modes)</li>
-    <li class=MsoNormal style='color:black;'><span
-     style='font-size:10.0pt;font-family:Arial'>single-clicking a currently-open 
+    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">single-clicking a currently-open 
       Java file in the Navigator or Package Explorer view. </span></li>
-    <li class=MsoNormal style='color:black;'>single-clicking a Java type, method 
+    <li class="MsoNormal" style="color: black; ">single-clicking a Java type, method 
       or field (if its compilation unit is currently open) in &nbsp;the Package 
       Explorer, Types, Members or Hierarchy view</li>
-    <li class=MsoNormal style='color:black;'><span
-     style='font-size:10.0pt;font-family:Arial'>selecting <span class=label><b>Open</b></span> 
+    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">selecting <span class="label"><b>Open</b></span> 
       from the pop-up menu of either a type or a method in the Hierarchy, Members, 
       Types or Package Explorer view.</span></li>
   </ul>
-  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
-alt="Related concepts" border=0></p>
-  <p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a></p>
-  <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="..\tasks\tasks-59.htm">Adding required import statements</a><br>
-    <a href="..\tasks\tasks-138.htm">Evaluating expressions</a><br>
-    <a href="..\tasks\tasks-66.htm">Formatting Java code</a><br>
-    <a href="..\tasks\tasks-57.htm">Generating accessors</a><br>
-    <a href="..\tasks\tasks-130.htm">Launching a Java program</a><br>
-    <a href="..\tasks\tasks-73.htm">Opening an editor for a selected element</a><br>
-    <a href="..\tasks\tasks-65.htm">Using content/code assist</a><br>
-    <a href="..\tasks\tasks-54.htm">Using the Java editor</a><br>
-    <a href="..\tasks\tasks-107.htm">Viewing compilation errors and warnings</a><br>
-    <a href="..\tasks\tasks-156.htm">Viewing runtime exceptions</a></p>
-  <p><img border=0 width=159 height=27 id="_x0000_i1027"
-src="..\images\ngrelr.gif" alt="Related reference"></p>
-  <p><a href="..\reference\ref-5.htm">Java editor actions</a><br>
-    <a href="..\reference\ref-102.htm">Outline view for Java</a><br>
-    <a href="..\reference\ref-26.htm">Syntax highlighting</a><br>
-    <a href="..\reference\ref-24.htm">Views and editors</a></p>
+  <p><img width="159" height="27" id="_x0000_i1025" src="..%5Cimages%5Cngrelc.gif" alt="Related concepts" border="0"></p>
+  <p><a href="..%5Cconcepts%5Cconcepts-1.htm">Java development tools (JDT)</a></p>
+  <p><img border="0" width="159" height="27" id="_x0000_i1026" src="..%5Cimages%5Cngrelt.gif" alt="Related tasks"></p>
+  <p><a href="..%5Ctasks%5Ctasks-59.htm">Adding required import statements</a><br>
+    <a href="..%5Ctasks%5Ctasks-138.htm">Evaluating expressions</a><br>
+    <a href="..%5Ctasks%5Ctasks-66.htm">Formatting Java code</a><br>
+    <a href="..%5Ctasks%5Ctasks-57.htm">Generating accessors</a><br>
+    <a href="..%5Ctasks%5Ctasks-130.htm">Launching a Java program</a><br>
+    <a href="..%5Ctasks%5Ctasks-73.htm">Opening an editor for a selected element</a><br>
+    <a href="..%5Ctasks%5Ctasks-65.htm">Using content/code assist</a><br>
+    <a href="..%5Ctasks%5Ctasks-54.htm">Using the Java editor</a><br>
+    <a href="..%5Ctasks%5Ctasks-107.htm">Viewing compilation errors and warnings</a><br>
+    <a href="..%5Ctasks%5Ctasks-156.htm">Viewing runtime exceptions</a></p>
+  <p><img border="0" width="159" height="27" id="_x0000_i1027" src="..%5Cimages%5Cngrelr.gif" alt="Related reference"></p>
+  <p><a href="..%5Creference%5Cref-5.htm">Java editor actions</a><br>
+    <a href="..%5Creference%5Cref-102.htm">Outline view for Java</a><br>
+    <a href="..%5Creference%5Cref-26.htm">Syntax highlighting</a><br>
+    <a href="..%5Creference%5Cref-24.htm">Views and editors</a></p>
 </div>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a> 
 </p>
-</body>
-</html>
+</body></html>
