--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-9.htm
@@ -1,53 +1,47 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><HTML>
-<head>
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
+<link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css">
+  <title>Refactoring support</title>
 </head>
-<body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
-<div class=Section1> 
+<body bgcolor="#ffffff" lang="EN-US" link="blue" vlink="blue">
+<div class="Section1"> 
   <h1>Refactoring support</h1>
-  <p class=para>The goal of refactoring is to improve source code without changing 
+  <p class="para">The goal of refactoring is to improve source code without changing 
     its behavior. Refactoring means behavior-preserving program transformation. 
     When you refactor your code, your goal is to make a system-wide code change 
     without affecting the behavior of the system. The JDT helps you automatically 
     manage refactorings.</p>
-  <p class=para>The JDT supports a number of transformations described in Martin 
-    Fowler's book <span class=title1><i>Refactoring: Improving the Design of Existing 
+  <p class="para">The JDT supports a number of transformations described in Martin 
+    Fowler's book <span class="title1"><i>Refactoring: Improving the Design of Existing 
     Code</i></span>, Addison Wesley 1999.</p>
-  <p class=para>When performing a refactoring operation, you can optionally preview 
+  <p class="para">When performing a refactoring operation, you can optionally preview 
     all the impending changes resulting from a refactoring action before you finally 
     choose to carry them out. Thus, you can execute a refactoring in one of two 
     different ways: </p>
-  <ul type=disc>
-    <li class=MsoNormal style='color:black;'><span
-     style='font-size:10.0pt;font-family:Arial'>Refactoring without preview<br>
+  <ul type="Disc">
+    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Refactoring without preview<br>
       In a quick refactoring, you skip being notified of potential problems and 
       the refactoring preview. If a Stop problem is detected, the refactoring 
       will not be carried out.</span></li>
-    <li class=MsoNormal style='color:black;'><span
-     style='font-size:10.0pt;font-family:Arial'>Refactoring with preview<br>
+    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Refactoring with preview<br>
       In a controlled refactoring, you are notified of potential problems and 
       are given a detailed preview of what the refactoring action will do.</span></li>
   </ul>
   <p>Refactoring commands are available from the context menus in may views and 
     editors.</p>
-  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
-alt="Related concepts" border=0></p>
-  <p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a></p>
-  <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"><br>
-    <a href="..\tasks\tasks-82.htm">Refactoring without preview</a><br>
-    <a href="..\tasks\tasks-83.htm">Refactoring with preview</a><br>
-    <a href="..\tasks\tasks-84.htm">Previewing refactoring changes</a><br>
-    <a href="..\tasks\tasks-100.htm">Undoing a refactoring operation</a><br>
-    <a href="..\tasks\tasks-101.htm">Redoing a refactoring operation</a><br>
+  <p><img width="159" height="27" id="_x0000_i1025" src="..%5Cimages%5Cngrelc.gif" alt="Related concepts" border="0"></p>
+  <p><a href="..%5Cconcepts%5Cconcepts-1.htm">Java development tools (JDT)</a></p>
+  <p><img border="0" width="159" height="27" id="_x0000_i1026" src="..%5Cimages%5Cngrelt.gif" alt="Related tasks"><br>
+    <a href="..%5Ctasks%5Ctasks-82.htm">Refactoring without preview</a><br>
+    <a href="..%5Ctasks%5Ctasks-83.htm">Refactoring with preview</a><br>
+    <a href="..%5Ctasks%5Ctasks-84.htm">Previewing refactoring changes</a><br>
+    <a href="..%5Ctasks%5Ctasks-100.htm">Undoing a refactoring operation</a><br>
+    <a href="..%5Ctasks%5Ctasks-101.htm">Redoing a refactoring operation</a><br>
     &nbsp;</p>
-  <p><img border=0 width=159 height=27 id="_x0000_i1027"
-src="..\images\ngrelr.gif" alt="Related reference"></p>
-  <p><a href="..\reference\ref-116.htm">Refactoring actions</a><br>
-    <a href="..\reference\ref-117.htm">Refactoring wizard</a><br>
-    <a href="..\reference\ref-23.htm">Refactoring preferences</a></p>
+  <p><img border="0" width="159" height="27" id="_x0000_i1027" src="..%5Cimages%5Cngrelr.gif" alt="Related reference"></p>
+  <p><a href="..%5Creference%5Cref-116.htm">Refactoring actions</a><br>
+    <a href="..%5Creference%5Cref-117.htm">Refactoring wizard</a><br>
+    <a href="..%5Creference%5Cref-23.htm">Refactoring preferences</a></p>
 </div>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a> 
 </p>
-</body>
-</html>
+</body></html>
