--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-2.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-2.htm
@@ -8,10 +8,15 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">Workbench</H1>
-<P>
+<P>The term <i>workbench</i> refers to the desktop development environment. 
 The workbench aims to achieve seamless tool integration and controlled openness by providing a common paradigm for the creation, management, and navigation of workbench resources.</P>
 
 
+<P>
+Each workbench window contains one or more
+perspectives.&nbsp; Perspectives contain views and editors and control
+what appears in certain menus and tool bars.&nbsp; More than one workbench window can exist
+on the desktop at any given time.</P>
 <P><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="concepts-25.htm"><br>
 Features<br>
 </a><a href="concepts-12.htm">Resources</a><a href="concepts-4.htm"><br>
