cleaned up word tags

--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-8.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-8.htm
@@ -2,107 +2,85 @@
 <head>
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 </head>
-
-<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
-
-<div class=Section1>
-
-<h1>Java search</h1>
-
-<p class=MsoNormal><span style='font-size:10.0pt'>The Java searching support
-allows you to find precise declarations and references of Java elements
-(packages, types, methods, fields). Searching is supported by an index that is
-kept up to date in the background as the resources corresponding to Java elements
-are changed. The Java search does not need the workspace to have ever been
-built. It is still possible to conduct searches when auto-build is turned off.<o:p></o:p></span></p>
-
-<p class=para>The following searches can be conducted from the pop-up menus of
-Java elements:</p>
-
-<table border=1 cellspacing=0 cellpadding=0 style='mso-cellspacing:0in'>
- <thead>
-  <tr>
-   <td style='padding:.75pt .75pt .75pt .75pt'>
-   <p class=para align=center style='text-align:center'><b>Command<o:p></o:p></b></p>
-   </td>
-   <td style='padding:.75pt .75pt .75pt .75pt'>
-   <p class=para align=center style='text-align:center'><b>Description<o:p></o:p></b></p>
-   </td>
-  </tr>
- </thead>
- <tr>
-  <td valign=top style='padding:.75pt .75pt .75pt .75pt'>
-  <p class=para>References</p>
-  </td>
-  <td valign=top style='padding:.75pt .75pt .75pt .75pt'>
-  <p class=para>Finds all references to the selected Java element</p>
-  </td>
- </tr>
- <tr>
-  <td valign=top style='padding:.75pt .75pt .75pt .75pt'>
-  <p class=para>Declarations </p>
-  </td>
-  <td valign=top style='padding:.75pt .75pt .75pt .75pt'>
-  <p class=para>Finds all declarations of the selected Java element</p>
-  </td>
- </tr>
- <tr>
-  <td valign=top style='padding:.75pt .75pt .75pt .75pt'>
-  <p class=para>Implementors</p>
-  </td>
-  <td valign=top style='padding:.75pt .75pt .75pt .75pt'>
-  <p class=para>Finds all implementors of the selected Java interface</p>
-  </td>
- </tr>
- <tr>
-  <td valign=top style='padding:.75pt .75pt .75pt .75pt'>
-  <p class=para>Read access</p>
-  </td>
-  <td valign=top style='padding:.75pt .75pt .75pt .75pt'>
-  <p class=para>Finds all read accesses to the selected Java field</p>
-  </td>
- </tr>
- <tr>
-  <td valign=top style='padding:.75pt .75pt .75pt .75pt'>
-  <p class=para>Write access </p>
-  </td>
-  <td valign=top style='padding:.75pt .75pt .75pt .75pt'>
-  <p class=para>Finds all write accesses to the selected Java field</p>
-  </td>
- </tr>
-</table>
-
-<p>&nbsp;</p>
-
-<p>Searches can be performed on various scopes:</p>
-
-<p><b>Workspace</b> &#8211; all projects and files in them are included in this
-search</p>
-
-<p><b>Hierarchy</b> &#8211; only the type hierarchy of the selected element (or its
-declaring type&#8217;s) is included in this search</p>
-
-<p><b>Working Set</b> &#8211; only resources that belong to the chosen working set
-are is included in this search</p>
-
-<p><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></p>
-
-<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+<body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
+<div class=Section1> 
+  <h1>Java search</h1>
+  <p class=MsoNormal><span style='font-size:10.0pt'>The Java searching support 
+    allows you to find precise declarations and references of Java elements (packages, 
+    types, methods, fields). Searching is supported by an index that is kept up 
+    to date in the background as the resources corresponding to Java elements 
+    are changed. The Java search does not need the workspace to have ever been 
+    built. It is still possible to conduct searches when auto-build is turned 
+    off.</span></p>
+  <p class=para>The following searches can be conducted from the pop-up menus 
+    of Java elements:</p>
+  <table border=1 cellspacing=0 cellpadding=0>
+    <thead> 
+    <tr> 
+      <td> 
+        <p class=para align=center style='text-align:center'><b>Command</b></p>
+      </td>
+      <td> 
+        <p class=para align=center style='text-align:center'><b>Description</b></p>
+      </td>
+    </tr>
+    </thead> 
+    <tr> 
+      <td valign=top> 
+        <p class=para>References</p>
+      </td>
+      <td valign=top> 
+        <p class=para>Finds all references to the selected Java element</p>
+      </td>
+    </tr>
+    <tr> 
+      <td valign=top> 
+        <p class=para>Declarations </p>
+      </td>
+      <td valign=top> 
+        <p class=para>Finds all declarations of the selected Java element</p>
+      </td>
+    </tr>
+    <tr> 
+      <td valign=top> 
+        <p class=para>Implementors</p>
+      </td>
+      <td valign=top> 
+        <p class=para>Finds all implementors of the selected Java interface</p>
+      </td>
+    </tr>
+    <tr> 
+      <td valign=top> 
+        <p class=para>Read access</p>
+      </td>
+      <td valign=top> 
+        <p class=para>Finds all read accesses to the selected Java field</p>
+      </td>
+    </tr>
+    <tr> 
+      <td valign=top> 
+        <p class=para>Write access </p>
+      </td>
+      <td valign=top> 
+        <p class=para>Finds all write accesses to the selected Java field</p>
+      </td>
+    </tr>
+  </table>
+  <p>Searches can be performed on various scopes:</p>
+  <p><b>Workspace</b> &#8211; all projects and files in them are included in this 
+    search</p>
+  <p><b>Hierarchy</b> &#8211; only the type hierarchy of the selected element 
+    (or its declaring type&#8217;s) is included in this search</p>
+  <p><b>Working Set</b> &#8211; only resources that belong to the chosen working 
+    set are is included in this search</p>
+  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
 alt="Related concepts" border=0></p>
-
-<p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1026"
+  <p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="..\images\ngrelt.gif" alt="Related tasks"></p>
-
-<p><a href="..\tasks\tasks-79.htm">Searching Java code</a></p>
-
+  <p><a href="..\tasks\tasks-79.htm">Searching Java code</a></p>
 </div>
-
-<p><br>
-<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
+<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a> 
 </p>
-
 </body>
-
 </html>
