--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-11.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-11.htm
@@ -55,8 +55,19 @@ Bookmarks</h3>
 Bookmarks place an anchor either at a specific line in a resource or
 on the resource itself.</P>
 
+<P CLASS="Para" Label=Type>
+<img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+<a href="cbookmrk.htm">Bookmarks</a><br>
+<a href="ctskview.htm">Task view</a></P>
+
+<P CLASS="Para" Label=Type>
+<img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="../tasks/tasks-81.htm">Creating a bookmark within a file</a><br>
+<a href="../tasks/tasks-81b.htm">Creating a bookmark for an entire file</a></P>
+
 <p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+<a href="../hglegal2002.htm">
+<img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0" width="324" height="14"></a>
 </p>
 
 </BODY>
