--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-5.htm
@@ -43,23 +43,23 @@
     <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Outline</span></li>
     <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Console</span></li>
   </ul>
-  <p><img width="159" height="27" id="_x0000_i1025" src="..%5Cimages%5Cngrelc.gif" alt="Related concepts" border="0"></p>
-  <p><a href="..%5Cconcepts%5Cconcepts-1.htm">Java development tools (JDT)</a><br>
-    <a href="..%5Cconcepts%5Cconcepts-6.htm">Java views</a></p>
-  <p><img border="0" width="159" height="27" id="_x0000_i1026" src="..%5Cimages%5Cngrelt.gif" alt="Related tasks"></p>
-  <p><a href="..%5Ctasks%5Ctasks-144.htm">Adding breakpoints</a><br>
-    <a href="..%5Ctasks%5Ctasks-42.htm">Opening a type hierarchy in its own perspective</a><br>
-    <a href="..%5Ctasks%5Ctasks-134.htm">Suspending threads</a></p>
-  <p><img border="0" width="159" height="27" id="_x0000_i1027" src="..%5Cimages%5Cngrelr.gif" alt="Related reference"></p>
-  <p><a href="..%5Creference%5Cref-35.htm">Breakpoints view</a><br>
-    <a href="..%5Creference%5Cref-45.htm">Console view</a><br>
-    <a href="..%5Creference%5Cref-51.htm">Debug view</a><br>
-    <a href="..%5Creference%5Cref-52.htm">Display view</a><br>
-    <a href="..%5Creference%5Cref-56.htm">Expressions view</a><br>
-    <a href="..%5Creference%5Cref-102.htm">Outline view for Java</a><br>
-    <a href="..%5Creference%5Cref-90.htm">Package Explorer view</a><br>
-    <a href="..%5Creference%5Cref-66.htm">Processes view</a><br>
-    <a href="..%5Creference%5Cref-74.htm">Variables view</a></p>
+  <p><img width="159" height="27" id="_x0000_i1025" src="../images/ngrelc.gif" alt="Related concepts" border="0"></p>
+  <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a><br>
+    <a href="../concepts/concepts-6.htm">Java views</a></p>
+  <p><img border="0" width="159" height="27" id="_x0000_i1026" src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="../tasks/tasks-144.htm">Adding breakpoints</a><br>
+    <a href="../tasks/tasks-42.htm">Opening a type hierarchy in its own perspective</a><br>
+    <a href="../tasks/tasks-134.htm">Suspending threads</a></p>
+  <p><img border="0" width="159" height="27" id="_x0000_i1027" src="../images/ngrelr.gif" alt="Related reference"></p>
+  <p><a href="../reference/ref-35.htm">Breakpoints view</a><br>
+    <a href="../reference/ref-45.htm">Console view</a><br>
+    <a href="../reference/ref-51.htm">Debug view</a><br>
+    <a href="../reference/ref-52.htm">Display view</a><br>
+    <a href="../reference/ref-56.htm">Expressions view</a><br>
+    <a href="../reference/ref-102.htm">Outline view for Java</a><br>
+    <a href="../reference/ref-90.htm">Package Explorer view</a><br>
+    <a href="../reference/ref-66.htm">Processes view</a><br>
+    <a href="../reference/ref-74.htm">Variables view</a></p>
 </div>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a> 
 </p>
