--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-9.htm
@@ -28,19 +28,19 @@
   </ul>
   <p>Refactoring commands are available from the context menus in may views and 
     editors.</p>
-  <p><img width="159" height="27" id="_x0000_i1025" src="..%5Cimages%5Cngrelc.gif" alt="Related concepts" border="0"></p>
-  <p><a href="..%5Cconcepts%5Cconcepts-1.htm">Java development tools (JDT)</a></p>
-  <p><img border="0" width="159" height="27" id="_x0000_i1026" src="..%5Cimages%5Cngrelt.gif" alt="Related tasks"><br>
-    <a href="..%5Ctasks%5Ctasks-82.htm">Refactoring without preview</a><br>
-    <a href="..%5Ctasks%5Ctasks-83.htm">Refactoring with preview</a><br>
-    <a href="..%5Ctasks%5Ctasks-84.htm">Previewing refactoring changes</a><br>
-    <a href="..%5Ctasks%5Ctasks-100.htm">Undoing a refactoring operation</a><br>
-    <a href="..%5Ctasks%5Ctasks-101.htm">Redoing a refactoring operation</a><br>
+  <p><img width="159" height="27" id="_x0000_i1025" src="../images/ngrelc.gif" alt="Related concepts" border="0"></p>
+  <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
+  <p><img border="0" width="159" height="27" id="_x0000_i1026" src="../images/ngrelt.gif" alt="Related tasks"><br>
+    <a href="../tasks/tasks-82.htm">Refactoring without preview</a><br>
+    <a href="../tasks/tasks-83.htm">Refactoring with preview</a><br>
+    <a href="../tasks/tasks-84.htm">Previewing refactoring changes</a><br>
+    <a href="../tasks/tasks-100.htm">Undoing a refactoring operation</a><br>
+    <a href="../tasks/tasks-101.htm">Redoing a refactoring operation</a><br>
     &nbsp;</p>
-  <p><img border="0" width="159" height="27" id="_x0000_i1027" src="..%5Cimages%5Cngrelr.gif" alt="Related reference"></p>
-  <p><a href="..%5Creference%5Cref-116.htm">Refactoring actions</a><br>
-    <a href="..%5Creference%5Cref-117.htm">Refactoring wizard</a><br>
-    <a href="..%5Creference%5Cref-23.htm">Refactoring preferences</a></p>
+  <p><img border="0" width="159" height="27" id="_x0000_i1027" src="../images/ngrelr.gif" alt="Related reference"></p>
+  <p><a href="../reference/ref-116.htm">Refactoring actions</a><br>
+    <a href="../reference/ref-117.htm">Refactoring wizard</a><br>
+    <a href="../reference/ref-23.htm">Refactoring preferences</a></p>
 </div>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a> 
 </p>
