*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-103.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-103.htm
@@ -4,64 +4,52 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Replacing resources in the workbench with a version from the repository</title>
+<title>Replacing resources in the workbench</title>
 <meta name="keyword" content="team">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Replacing resources with a repository version</H1>
+<H1 CLASS="Head"> Replacing resources in the workbench</H1>
 <P CLASS="Intro">
 To replace workbench resources with versions in the repository:
 <ol>
-  <li>
-    <p CLASS="Intro">
-Select a resource in the Navigator view.</li>
-  <li>
-    <p CLASS="Intro">From the resource's pop-up menu, select one of the following menu
-items:
-<UL CLASS="UnorderedList">
-<LI CLASS="Item">
-<b>
-Replace With &gt; Stream Contents</b> - replace the workbench resource with the version
-currently released in the stream.</LI>
-<LI CLASS="Item">
-<b>
-Replace With &gt; Version</b> - replace the workbench resource with a specific version
-that you select in the repository. When you select this option, another window
-opens, so that you can browse through versions in the repository and select the
-one that you want. The text compare area shows you the differences between the
-workbench resource and the various version in the repository.</LI>
-<LI CLASS="Item">
-<b>
-Replace With &gt; Base Version</b> - replace the workbench resource with the version that
-was taken from the stream during the last synchronization.</LI>
-</UL>
+  <li> 
+    <p CLASS="Intro"> Select a resource in the Navigator view.
   </li>
-  <li>Click Replace to complete the operation. </li>
+  <li> 
+    <p CLASS="Intro">From the resource's pop-up menu, select one of the following 
+      menu items: 
+    <UL CLASS="UnorderedList">
+      <LI CLASS="Item"> <b> Replace With &gt; Latest from Repository</b> - replace 
+        the workbench resource with the latest resources currently committed to 
+        the branch that the local project is shared with.</LI>
+      <LI CLASS="Item"> <b> Replace With &gt; Branch or Version</b> - replace 
+        the workbench resource with a specific version or branch that you select 
+        in the repository. When you select this option, another window opens, 
+        so that you can browse through the branch and version tags in the repository 
+        and select the one that you want.</LI>
+      <LI CLASS="Item"> <b> Replace With &gt; Revision</b> - (available only on 
+        a file) replace the workbench file with another revision of the file. 
+        When you select this option, a dialog opens to allow you to select a revision 
+        from the list of available ones. A test window displays the comparison 
+        between the local revision and the selected remote revision.</LI>
+    </UL>
+  </li>
 </ol>
 
 
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-26.htm">Team programming</a> &nbsp;<a href="../concepts/concepts-27c.htm"><br>
-Repositories</a><a href="../concepts/concepts-27v.htm"><br>
-Repositories view</a><a href="../concepts/concepts-27b.htm"><br>
-Streams</a><a href="../reference/ref-51a.htm"><br>
-</a><a href="../concepts/concepts-30.htm">
-Team synchronization</a>&nbsp;<a href="../concepts/concepts-27.htm"><br>
-Resource versions</a></p>
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
+<br><a href="../concepts/concepts-26.htm">Team programming with CVS</a>
+<br><a href="../concepts/concepts-27c.htm">CVS Repositories</a>
+<br><a href="../concepts/concepts-27b.htm">Branches</a>
+<br><a href="../concepts/concepts-27.htm">Versions</a></p>
 
 
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-96.htm"><br>
-Adding resources from a repository to the workbench</a>&nbsp;<a href="tasks-103.htm"><br>
-</a><a href="tasks-117.htm">
-Associating a project with a stream</a><a href="tasks-119.htm"><br>
-Viewing the history of a stream resource</a><a href="tasks-100a.htm"><br>
-Splitting from a stream</a><a href="tasks-115.htm"><br>
-Synchronizing with a stream</a><a href="tasks-113.htm"><br>
-Catching up</a><a href="tasks-113b.htm"><br>
-Resolving conflicts and merging changes</a><a href="tasks-100b.htm"><br>
-Merging from a stream</a><a href="tasks-114.htm"><br>
-Releasing resources to the stream</a>
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
+<br><a href="tasks-96.htm">Checking out a project from a CVS repository</a>
+<br><a href="tasks-117.htm">Sharing a new project using CVS</a>
+<br><a href="tasks-119.htm">Viewing a File's Revision History</a>
+<br><a href="tasks-100a.htm">Branching</a>
+<br><a href="tasks-115.htm">Synchronizing with the repository</a>
 </p>
 
 <p>&nbsp;<br>
