--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-117.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-117.htm
@@ -55,7 +55,7 @@
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
 <br><a href="tasks-117a.htm">Sharing an imported CVS project</a>
 <br><a href="tasks-96.htm">Checking out a project from a CVS repository</a>
-<br><a href="tasks-103.htm">Replacing resources with a repository version</a>
+<br><a href="tasks-103.htm">Replacing resources in the workbench</a>
 <br><a href="tasks-110.htm">Discovering branch and version tags</a>
 <br><a href="tasks-100a.htm">Splitting from a stream</a>
 <br><a href="tasks-115.htm">Synchronizing with a stream</a>
