--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39.htm
@@ -43,7 +43,8 @@ current perspective to its original views and layout.</P>
 <P CLASS="Para">
 Ensure there are editors open for JanesFile.txt and JanesText.txt. Close any
 other open editors including the Welcome Page if it is still open. Don't worry.
-You can always get back to the welcome page by choosing Help &gt; Welcome.</P>
+You can always get back to the welcome page by choosing Help &gt; Welcome... and
+selecting Eclipse Platform.</P>
 </TD>
 </TR>
 </TBODY>
