--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39c.htm
@@ -78,9 +78,9 @@ Restricted: if you release the mouse button when a restricted cursor is displaye
 </TABLE>
 
 
-<P><a href="qs-39e.htm">
+<P><a href="qs-39d.htm">
 <img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
-Tiling editors</a><P><a href="qs-39.htm">
+Rearranging views</a><P><a href="qs-39.htm">
 <img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
 Rearranging views and editors</a></P>
 
