Debug doc update for 2.0

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-14.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-14.htm
@@ -41,7 +41,7 @@ fFull.size()</SPAN>
 <TD valign="top" align="left">
 <P CLASS="Para">
 Select the text you just typed, and from its context menu, select <SPAN CLASS="Label">
-Display (or the equivalent item in the Display view toolbar or Run menu)</SPAN>.</P>
+Display</SPAN> (or the equivalent item in the Display view toolbar or Run menu)</SPAN>.</P>
 <DIV CLASS="Snapshot">
 <DIV>
 <IMG SRC="../images/qs-74.gif">
